--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: >
 email: pjw941@naver.com
 author: 박지원
 # avatar: "//www.gravatar.com/avatar/your_email_md5?d=mm&s=135"
-avatar: "//github.com/yunho0130/yunho0130.github.io/blob/master/_jpg/yunhomaeng.png"
+avatar: "https://github.com/account"
 profile: <br> 강의시간에 배운것을 복습하는 블로그
 #twitter_username: twitter_username
 github_username:  SMUParkjiwon
